i18n/nl/docusaurus-plugin-content-docs/version-1.3.2/user/user-manual/all-tasks.md
---
title: Alle Taken
sidebar_label: Alle Taken
description: Een uitgebreide gids voor de Taken-module. Ontdek hoe u taken aanmaakt en bewerkt, taakfasen beheert, veegacties (swipe actions) gebruikt en filtert op toegewezen personen voor het efficiënt bijhouden van de werkdruk.
---

# Taken

De module **Taken** helpt gebruikers bij het aanmaken, organiseren, toewijzen en volgen van individuele of alle werkitems binnen de Time Management-applicatie.

Taken zijn de kernwerkunits van de applicatie en kunnen worden gekoppeld aan projecten, toegewezen personen, fasen, prioriteiten en geplande schema's.

Met deze module kunnen gebruikers:
* Dagelijkse werkitems aanmaken en beheren.
* Verantwoordelijkheden toewijzen aan teamleden.
* Deadlines en achterstallige taken bijhouden.
* Taken organiseren op fase en prioriteit.
* De werkdruk efficiënt monitoren en de productiviteit verbeteren.

---

## Toegang tot de Taken-module
Om de sectie **Taken** te openen:
1. Klik op het **Kebab Menu** icoon in de linkerbovenhoek.
2. Selecteer **Alle Taken** in de zijbalknavigatie.

Het Takenscherm wordt geopend en toont alle beschikbare taken.

---

## Overzicht van het Takenscherm
Het Takenscherm is verdeeld in twee hoofdsecties:
1. Paneel Takenoverzicht
2. Paneel Takendetails of pagina voor nieuwe taak aanmaken

---

### Paneel Takenoverzicht
Elke taakkaart biedt een snelle samenvatting, waaronder: Taaknaam, Gerelateerde Projectnaam, Taakfase, Prioriteitsindicator, Geplande Uren, Startdatum, Einddatum en Achterstallige Status.

**Voorbeeld van Taakfasen:** Analyse, Ontwerp, Ontwikkeling, Testen, Voltooid.

**Achterstallig-indicator:** Als een taak de geplande einddatum overschrijdt en niet is voltooid, geeft het systeem een rood **Achterstallig** (Overdue) label weer.

**Datumtabbladen:** Taken kunnen worden gefilterd met behulp van snelle datumcategorieën (Vandaag, Deze Week, Deze Maand, Later, Voltooid, Alles).

---

### Paneel Takendetails
Om een nieuwe taak aan te maken, klikt u op het `+` icoon om het invoerformulier voor een nieuwe taak te openen. 
Om de taakdetails van een reeds aangemaakte taak te bekijken, klikt u op de betreffende taak om gedetailleerde informatie weer te geven.

Gebruikers kunnen nieuwe taken aanmaken, bestaande taken bewerken, gebruikers toewijzen, prioriteiten instellen, fasen definiëren, beschrijvingen toevoegen, datums configureren en bijlagen uploaden.

---

## Een Nieuwe Taak Aanmaken
Om een taak aan te maken:
1. Open de module **Alle Taken**.
2. Klik op het **Toevoegen-icoon** in de rechterbovenhoek.
3. Vul de vereiste taakdetails in.
4. Klik op de **Opslaan-knop**.

### Velden voor het Aanmaken van een Taak
* **Account**: Bepaalt de verbonden account/omgeving.
* **Project & Subproject**: Koppelt de taak aan specifieke operationele projecten.
* **Hoofdtaak (Parent Task)**: Wordt gebruikt om subtaken onder een grotere taak aan te maken om de workflow te verbeteren.
* **Toegewezen aan (Assignees)**: Bepaalt de verantwoordelijke gebruikers. U kunt meerdere gebruikers uit de lijst selecteren en het kruisje gebruiken om de selectie ongedaan te maken.
* **Taaknaam**: De primaire, beschrijvende titel van het werkitem.
* **Prioriteit**: Belangrijkheidsniveau weergegeven door een sterrenbeoordelingssysteem 
* **Beginfase (Initial Stage)**: Huidige workflowfase (Analyse, Ontwerp, enz.).
* **Beschrijving**: Gedetailleerde informatie, doelstellingen en omvang van het werk.
* **Geplande Uren**: Geschatte benodigde tijd (bijv. `01:00` = 1 uur).

### Sectie Geplande Datums
* **Datumbereik**: Snelle planningsvoorinstellingen (Vandaag, Deze Week, Aangepast Bereik).
* **Start- & Einddatum**: Geselecteerd via de datumkiezer (date picker) voor planning en het bijhouden van deadlines.
* **Deadline Sectie**: Definieer een definitieve verwachte voltooiingsdatum om urgent werk te prioriteren.

### Sectie Bijlagen
Upload bestanden om taakgerelateerde bronnen te centraliseren en de samenwerking te verbeteren.

---

## Taakdetails Bekijken en Bewerken
Het selecteren van een taak uit het overzicht toont de volledige informatie (status, toegewezen personen, geplande uren, prioriteit, bijlagen).

Om een bestaande taak te bewerken:
1. Selecteer de taak uit de takenlijst en klik op het bewerken-icoon (of veeg de taak naar links en klik op het bewerken-icoon).
2. Werk de vereiste velden bij.
3. Klik op de **Opslaan-knop**.

---

## Beheer van Taakfasen
Taken doorlopen fasen (Analyse, Ontwerp, Ontwikkeling, Testen, Voltooid) om de workflowtracering en voortgangsbewaking te verbeteren.

---

## Taken Zoeken en Filteren
* **Zoeken**: Klik op het **Zoekicoon** en voer de Taaknaam in om taken direct te vinden.
* **Filteren op Toegewezen Persoon**: Helpt managers bij het beoordelen van de werkdruk van het team.
    1. Klik op het **Toegewezen Persoon Filter-icoon** (Assignee Filter Icon) in de bovenste balk.
    2. De pop-up "Filteren op Toegewezen Personen" verschijnt (standaard is de ingelogde gebruiker geselecteerd).
    3. Selecteer beschikbare gebruikers met behulp van het selectievakje (er kunnen er meerdere worden geselecteerd) en klik op **Filter Toepassen**.

---

## Taakstatus Indicatoren
Visuele indicatoren zijn onder andere:
* **Rode Achterstallig Tekst**: Deadline van de taak is overschreden.
* **Sterrenbeoordeling**: Prioriteitsniveau van de taak.
* **Faselabel**: Huidige workflowfase.
* **Geplande Uren**: Geschatte inspanning.

---

## Zwevende Actieknop (FAB - Floating Action Button)
Bevindt zich in de rechterbenedenhoek van het Takenoverzichtsscherm en biedt snelle toegang om taken aan te maken. Klik op de FAB, selecteer **Taak**, vul de informatie in en klik op **Opslaan**.

---

## Taak Veegacties (Swipe Actions)
Veegbewegingen maken snel beheer direct vanuit de lijst mogelijk.

### Veeg naar Rechts Acties (Opnieuw Plannen & Verwijderen)
* **Opnieuw Plannen-icoon**: Wijzig snel geplande datums met behulp van snelkoppelingen (Morgen, Volgende Week, Volgende Maand) of definieer een Aangepast Datumbereik.
* **Verwijderen-icoon**: Verwijdert de geselecterde taak uit het systeem.

### Veeg naar Links Acties (Bekijken, Bewerken, Starten & Pauzeren)
* **Bekijken**: Opent gedetailleerde taakinformatie.
* **Bewerken**: Opent het scherm voor het bewerken van de taak.
* **Starten**: Start de taaktimer automatisch, toont de herontworpen globale zwevende timer-widget en maakt mogelijk een urenstaat-invoer aan. Een eventueel eerder actieve urenstaat wordt automatisch op de status **Concept (Draft)** gezet om overlappende actieve timers te voorkomen.
* **Pauzeren**: Stopt of pauzeert de lopende taaktimer om onjuiste registratie te voorkomen.